force-app/main/default/objects/User/fields/Accrued_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Leave_Days__c</fullName>
    <description>Annual leave accrued to date at 1 day per month, capped at the year&apos;s allocation. Returns 0 when Start_Date__c is blank or still in the future, so the check fails closed rather than blank or negative. Note this evaluates the real TODAY() and so cannot follow a simulated date passed to LeaveManagementController.runDaily().</description>
    <formula>IF(
  OR(ISBLANK(Start_Date__c), Start_Date__c &gt; TODAY()),
  0,
  MAX(0,
    MIN(
      BLANKVALUE(Annual_Leave_Allocated__c, 0),
      IF(
        YEAR(Start_Date__c) = YEAR(TODAY()),
        MONTH(TODAY()) - MONTH(Start_Date__c) + 1,
        MONTH(TODAY())
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrued Leave Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>