force-app/main/default/objects/User/fields/Annual_Leave_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave_Allocated__c</fullName>
    <label>Annual Leave Allocated</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>