force-app/main/default/objects/User/fields/Annual_Leave_Granted_Year__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave_Granted_Year__c</fullName>
    <description>Idempotency guard. Holds the year in which annual leave was last granted, so a re-run of the January 1 job does not grant twice.</description>
    <label>Last Annual Grant Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>