force-app/main/default/objects/User/fields/Annual_Leave_Used__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annual Leave Used</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>