force-app/main/default/objects/User/fields/Carry_Over_Days__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Annual leave days carried in from the prior year, capped at 6. Consumed before current-year days, because it expires first. Expires on Carry_Over_Expiry__c.</description>
    <label>Carry Over Days</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>