force-app/main/default/objects/User/fields/Carry_Over_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Expiry__c</fullName>
    <description>Date on which Carry_Over_Days__c expires. Set to June 30 of the carry-over year by the January 1 grant.</description>
    <label>Carry Over Expiry</label>
    <type>Date</type>
</CustomField>