force-app/main/default/objects/User/fields/Leave_Plan_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Leave_Plan_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the employee has submitted their leave plan by month 5. If false past the deadline, the company designates the dates.</description>
    <label>Leave Plan Submitted</label>
    <type>Checkbox</type>
</CustomField>