force-app/main/default/objects/User/fields/Personal_Leave_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Personal_Leave_Allocated__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Annual paid personal business leave cap. Default 3 is a placeholder pending HR confirmation. Reset annually; no carry-over.</description>
    <label>Personal Leave Allocated</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>