force-app/main/default/objects/User/fields/Personal_Leave_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Personal_Leave_Remaining__c</fullName>
    <description>Personal leave days remaining. Deliberately a formula: deriving it makes allocation and consumption impossible to desynchronise.</description>
    <formula>BLANKVALUE(Personal_Leave_Allocated__c, 0) - BLANKVALUE(Personal_Leave_Used__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Leave Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>