force-app/main/default/objects/User/fields/Personal_Leave_Used__c.field-meta.xml
<CustomField>
    <fullName>Personal_Leave_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Personal leave days consumed this year. Incremented when a Personal leave request is approved. Reset to 0 by the January 1 job.</description>
    <label>Personal Leave Used</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>