force-app/main/default/objects/User/fields/Probation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_End_Date__c</fullName>
    <description>Last day of the 119-day probation period. Blank when Start_Date__c is blank, which is intentional: a user with no start date must not be treated as having completed probation.</description>
    <formula>Start_Date__c + 119</formula>
    <label>Probation End Date</label>
    <type>Date</type>
</CustomField>