force-app/main/default/objects/User/fields/Refresh_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Leave_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Anniversary special leave remaining. Granted 1-5 days by years of service per Refresh_Leave_Rule__mdt. Not encashable. Expires on Refresh_Leave_Expiry__c.</description>
    <label>Refresh Leave Days</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>