force-app/main/default/objects/User/fields/Refresh_Leave_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Leave_Expiry__c</fullName>
    <description>Date on which Refresh_Leave_Days__c expires. Set to the anniversary plus Grant_Window_Months__c from Refresh_Leave_Rule__mdt.</description>
    <label>Refresh Leave Expiry</label>
    <type>Date</type>
</CustomField>