force-app/main/default/objects/User/fields/Refresh_Leave_Granted_Year__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Leave_Granted_Year__c</fullName>
    <description>Idempotency guard. Holds the year in which refresh leave was last granted, so a re-run of the anniversary job does not grant twice.</description>
    <label>Last Refresh Grant Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>