force-app/main/default/objects/User/fields/Sick_Leave_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Allocated__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Annual paid sick leave cap. Default 30 is a placeholder pending HR confirmation. Reset annually; no carry-over and not encashable.</description>
    <label>Sick Leave Allocated</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>