force-app/main/default/objects/User/fields/Sick_Leave_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Remaining__c</fullName>
    <description>Sick leave days remaining. Deliberately a formula: deriving it makes allocation and consumption impossible to desynchronise.</description>
    <formula>BLANKVALUE(Sick_Leave_Allocated__c, 0) - BLANKVALUE(Sick_Leave_Used__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sick Leave Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>