force-app/main/default/objects/User/fields/Sick_Leave_Used__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sick leave days consumed this year. Incremented when a Sick Leave request is approved. Reset to 0 by the January 1 job.</description>
    <label>Sick Leave Used</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>