force-app/main/default/objects/User/fields/Total_Leave_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Leave_Available__c</fullName>
    <description>Total annual leave available: current year plus carry over. Refresh, sick and personal leave are deliberately excluded, as they are drawn from separately.</description>
    <formula>BLANKVALUE(Annual_Leave_Day__c, 0) + BLANKVALUE(Carry_Over_Days__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Leave Available</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>