force-app/main/default/objects/User/listViews/Demo_View.listView-meta.xml
<ListView>
    <fullName>Demo_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COMMUNITY_NICKNAME</field>
        <operation>contains</operation>
        <value>Demo</value>
    </filters>
    <label>Demo View</label>
    <language>en_US</language>
</ListView>